--- a/organo/src/componentes/ListaSuspensa/ListaSuspensa.css
+++ b/organo/src/componentes/ListaSuspensa/ListaSuspensa.css
@@ -1,17 +1,14 @@
-.campo-texto {
-    margin: 24px 0;
-
-}
-
-.campo-texto label {
+.lista-suspensa {
     display: block;
     margin-bottom: 8px;
     font-size: 24px;
+    border-radius: 10px;
+
 }
 
-.campo-texto input {
-    background-color: #FFF;
-    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
+.lista-suspensa select {
+    background-color: #fff;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.06);
     width: 100%;
     border: none;
     border-radius: 10px;
@@ -19,4 +16,6 @@
     padding: 24px;
     box-sizing: border-box;
 
+
+  
 }
